# cmake_example

./: CMakeLists.txt
lib1/: CMakeLists.txt  lib1.c  lib1.h
lib2/: CMakeLists.txt  lib2.c  lib2.h
lib3/: CMakeLists.txt  lib3.c  lib3.h
lib4/: CMakeLists.txt  lib4.c  lib4.h
test/: CMakeLists.txt  test.c
test/Test/: CMakeLists.txt
test/Test_Lib3/: CMakeLists.txt
